Change default namespace

--- a/Components/Account/Shared/AccountLayout.razor
+++ b/Components/Account/Shared/AccountLayout.razor
@@ -1,5 +1,5 @@
 ﻿@inherits LayoutComponentBase
-@layout api.fergl.ie.Components.Layout.MainLayout
+@layout Ferglie.Api.Components.Layout.MainLayout
 @inject NavigationManager NavigationManager
 
 @if (HttpContext is null)
