--- a/Components/Account/Shared/ManageNavMenu.razor
+++ b/Components/Account/Shared/ManageNavMenu.razor
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using api.fergl.ie.Data
+@using Ferglie.Api.Data
 
 @inject SignInManager<ApplicationUser> SignInManager
 
