--- a/Components/Account/Pages/Manage/Email.razor
+++ b/Components/Account/Pages/Manage/Email.razor
@@ -5,7 +5,7 @@
 @using System.Text.Encodings.Web
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using api.fergl.ie.Data
+@using Ferglie.Api.Data
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IEmailSender<ApplicationUser> EmailSender
