--- a/Components/Account/Pages/Manage/ExternalLogins.razor
+++ b/Components/Account/Pages/Manage/ExternalLogins.razor
@@ -2,7 +2,7 @@
 
 @using Microsoft.AspNetCore.Authentication
 @using Microsoft.AspNetCore.Identity
-@using api.fergl.ie.Data
+@using Ferglie.Api.Data
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
