--- a/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
+++ b/Components/Account/Pages/Manage/GenerateRecoveryCodes.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Account/Manage/GenerateRecoveryCodes"
 
 @using Microsoft.AspNetCore.Identity
-@using api.fergl.ie.Data
+@using Ferglie.Api.Data
 
 @inject UserManager<ApplicationUser> UserManager
 @inject IdentityUserAccessor UserAccessor
