--- a/Components/Account/Pages/Manage/ResetAuthenticator.razor
+++ b/Components/Account/Pages/Manage/ResetAuthenticator.razor
@@ -1,7 +1,7 @@
 ﻿@page "/Account/Manage/ResetAuthenticator"
 
 @using Microsoft.AspNetCore.Identity
-@using api.fergl.ie.Data
+@using Ferglie.Api.Data
 
 @inject UserManager<ApplicationUser> UserManager
 @inject SignInManager<ApplicationUser> SignInManager
