--- a/Components/Account/Pages/ResetPassword.razor
+++ b/Components/Account/Pages/ResetPassword.razor
@@ -4,7 +4,7 @@
 @using System.Text
 @using Microsoft.AspNetCore.Identity
 @using Microsoft.AspNetCore.WebUtilities
-@using api.fergl.ie.Data
+@using Ferglie.Api.Data
 
 @inject IdentityRedirectManager RedirectManager
 @inject UserManager<ApplicationUser> UserManager
