--- a/Components/Routes.razor
+++ b/Components/Routes.razor
@@ -1,4 +1,4 @@
-﻿@using api.fergl.ie.Components.Account.Shared
+﻿@using Ferglie.Api.Components.Account.Shared
 <Router AppAssembly="@typeof(Program).Assembly">
     <Found Context="routeData">
         <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(Layout.MainLayout)">
