--- a/Components/_Imports.razor
+++ b/Components/_Imports.razor
@@ -7,5 +7,5 @@
 @using static Microsoft.AspNetCore.Components.Web.RenderMode
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using api.fergl.ie
-@using api.fergl.ie.Components
+@using Ferglie.Api
+@using Ferglie.Api.Components
